Gorm DB connection and utilty are added
